--- a/views/divisions.erb
+++ b/views/divisions.erb
@@ -1,7 +1,15 @@
 <h1>Divisions</h1>
 
+<form class="form-inline" action="/divisions/add" method="post">
+  <div class="form-group">
+    <label for="name">Add Division</label>
+    <input id="name" type="text" name="name" placeholder="Name" class="form-control">
+    <button type="submit" class="btn btn-primary">Add</button>
+  </div>
+</form>
+
 <% @divisions.each() do |division| %>
 
-<li><%= division.name() %><a href="/divisions/<%= employee.id() %>/edit">Update Division Info</a></li>
+<li><%= division.name() %> <a href="/divisions/<%= division.id() %>/edit"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a></li>
 
 <% end %>
